[tool.poetry]
name = "apiconversormoney"
version = "0.1.0"
description = ""
authors = ["mielesantos <mielesnts@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
requests = "^2.31.0"
aiohttp = "^3.8.4"

[tool.poetry.dev-dependencies]
mypy = "^1.4.1"
black = "^23.7.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
